syntax = "proto3";

option csharp_namespace = "IISServices";

service StartStopService {
    rpc Start (WebSiteNameDto) returns (CommandResult);
    rpc Stop (WebSiteNameDto) returns (CommandResult);
}
  
message WebSiteNameDto {
    string WebSiteName = 1;
}

message CommandResult {
    string Status = 1;
}